# secunda-test-project

./: .env  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/versions/: 320ca110b307_initial.py
app/: main.py
app/api/: deps.py
app/api/routes/: activities.py  buildings.py  organizations.py
app/core/: config.py  db.py  security.py
app/models/: activity.py  building.py  organization.py
app/schemas/: activity.py  building.py  common.py  organization.py
docker/: Dockerfile
sql/: seed.sql
